--- a/index.html
+++ b/index.html
@@ -9,15 +9,35 @@
 <body>
   <!-- navigation -->
   <header>
-    <h1>Run Buddy</h1>
+    <h1>
+      <a href="/">RUN BUDDY</a>
+    </h1>
+    <nav>
+      <!-- Unordered list element -->
+      <ul>
+        <!-- List item element -->
+        <li>
+          <!-- Anchor element -->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+          <a href="#reach-out">Reach Out</a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  
-  <!-- hero/jumbotron -->
-  <section>
 
-  </section>
+    <!-- hero/jumbotron -->
+    <section>
 
-  <nav>
+    </section>
+
     <!-- "what we do" section -->
     <section>
       <h2>What We Do</h2>
@@ -37,7 +57,6 @@
     <section>
       <h2>Reach Out</h2>
     </section>
-  </nav>
   
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
