--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- navigation -->
-  <header>
+  <header class="sticky">
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
@@ -35,8 +35,8 @@
   </header>
 
     <!-- hero/jumbotron -->
-    <section>
-      <div>
+    <section class="hero">
+      <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
         <!-- Add form element -->
@@ -44,9 +44,9 @@
           <label for="name">Enter full name:</label>
           <input type="text" placeholder="Your Full Name" name="name" id="name">
           <label for="email">Enter email address:</label>
-          <input type="text" placeholder="Email address" name="email" id="email">
+          <input type="email" placeholder="Email address" name="email" id="email">
           <label for="phone">Enter a telephone number:</label>
-          <input type="text" placeholder="xxx-xxx-xxxx" name="phone" id="phone">
+          <input type="tel" placeholder="xxx-xxx-xxxx" name="phone" id="phone">
           <p>
             Have you worked out with a trainer before?
             <input type="radio" name="trainer-confirm" id="trainer-yes">
