--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- navigation -->
-  <header class="sticky">
+  <header>
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
@@ -42,11 +42,11 @@
         <!-- Add form element -->
         <form>
           <label for="name">Enter full name:</label>
-          <input type="text" placeholder="Your Full Name" name="name" id="name">
+          <input class="form-input" type="text" placeholder="Your Full Name" name="name" id="name">
           <label for="email">Enter email address:</label>
-          <input type="email" placeholder="Email address" name="email" id="email">
+          <input class="form-input" type="email" placeholder="Email address" name="email" id="email">
           <label for="phone">Enter a telephone number:</label>
-          <input type="tel" placeholder="xxx-xxx-xxxx" name="phone" id="phone">
+          <input class="form-input" type="tel" placeholder="xxx-xxx-xxxx" name="phone" id="phone">
           <p>
             Have you worked out with a trainer before?
             <input type="radio" name="trainer-confirm" id="trainer-yes">
@@ -67,22 +67,48 @@
     <!-- End Hero -->
 
     <!-- "what we do" section -->
-    <section>
-      <h2>What We Do</h2>
+    <section id="what-we-do" class="intro">
+      <h2 class="section-title primary-border">What We Do</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti impedit minima consequatur fuga ea facilis laborum quidem repellendus iste, similique odit quo unde asperiores illo quaerat, tempora ex eaque perferendis necessitatibus. Voluptatum laborum doloribus porro similique quod corrupti harum, ex voluptates fugiat aspernatur, inventore distinctio debitis quas asperiores nisi commodi?</p>
     </section>
 
     <!-- "what you do" section -->
-    <section>
-      <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+
+      <h2 class="section-title secondary-border">What You Do</h2>
+
+      <div>
+        <img src='./assets/images/step-1.svg' alt=''/>
+        <h3>Step 1: Fill Out the Form Above.</h3>
+        <p>You're already here, so why not?</p>
+      </div>
+
+      <div>
+        <img src='./assets/images/step-2.svg' alt=''/>
+        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+      </div>
+
+      <div>
+        <img src='./assets/images/step-3.svg' alt=''/>
+        <h3>Step 3: Get Running.</h3>
+        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+      </div>
+
+      <div>
+        <img src='./assets/images/step-4.svg' alt=''/>
+        <h3>Step 4: See Results.</h3>
+        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+      </div>
     </section>
 
     <!-- "meet the trainers" section -->
-    <section>
+    <section id="your-trainers">
       <h2>Your Trainers</h2>
     </section>
 
     <!-- "reach out" section -->
-    <section>
+    <section id="reach-out">
       <h2>Reach Out</h2>
     </section>
   
