--- a/index.html
+++ b/index.html
@@ -1,64 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Run Buddy</title>
-</head>
-<body>
-  <!-- navigation -->
-  <header>
-    <h1>
-      <a href="/">RUN BUDDY</a>
-    </h1>
-    <nav>
-      <!-- Unordered list element -->
-      <ul>
-        <!-- List item element -->
-        <li>
-          <!-- Anchor element -->
-          <a href="#what-we-do">What We Do</a>
-        </li>
-        <li>
-          <a href="#what-you-do">What You Do</a>
-        </li>
-        <li>
-          <a href="#your-trainers">Your Trainers</a>
-        </li>
-        <li>
-          <a href="#reach-out">Reach Out</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Run Buddy</title>
+  </head>
+  <body>
+    <!-- navigation -->
+    <header>
+      <h1>
+        <a href="/">RUN BUDDY</a>
+      </h1>
+      <nav>
+        <!-- Unordered list element -->
+        <ul>
+          <!-- List item element -->
+          <li>
+            <!-- Anchor element -->
+            <a href="#what-we-do">What We Do</a>
+          </li>
+          <li>
+            <a href="#what-you-do">What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#reach-out">Reach Out</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <!-- hero/jumbotron -->
     <section class="hero">
       <div class="hero-form">
         <h3>Get Started Today</h3>
-        <p>Fill out this form and one of our trainers will schedule a consult</p>
+        <p>
+          Fill out this form and one of our trainers will schedule a consult
+        </p>
         <!-- Add form element -->
         <form>
           <label for="name">Enter full name:</label>
-          <input class="form-input" type="text" placeholder="Your Full Name" name="name" id="name">
+          <input
+            class="form-input"
+            type="text"
+            placeholder="Your Full Name"
+            name="name"
+            id="name"
+          />
           <label for="email">Enter email address:</label>
-          <input class="form-input" type="email" placeholder="Email address" name="email" id="email">
+          <input
+            class="form-input"
+            type="email"
+            placeholder="Email address"
+            name="email"
+            id="email"
+          />
           <label for="phone">Enter a telephone number:</label>
-          <input class="form-input" type="tel" placeholder="xxx-xxx-xxxx" name="phone" id="phone">
+          <input
+            class="form-input"
+            type="tel"
+            placeholder="xxx-xxx-xxxx"
+            name="phone"
+            id="phone"
+          />
           <p>
             Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes">
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
             <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no">
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
             <label for="trainer-no">No</label>
           </p>
           <p>
             <label for="checkbox">
               I acknowledge that I am at least 18 years of age.
             </label>
-            <input type="checkbox" name="age-confirm" id="checkbox">
+            <input type="checkbox" name="age-confirm" id="checkbox" />
           </p>
           <button type="submit">Get running!</button>
         </form>
@@ -69,35 +89,44 @@
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
       <h2 class="section-title primary-border">What We Do</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti impedit minima consequatur fuga ea facilis laborum quidem repellendus iste, similique odit quo unde asperiores illo quaerat, tempora ex eaque perferendis necessitatibus. Voluptatum laborum doloribus porro similique quod corrupti harum, ex voluptates fugiat aspernatur, inventore distinctio debitis quas asperiores nisi commodi?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
+        impedit minima consequatur fuga ea facilis laborum quidem repellendus
+        iste, similique odit quo unde asperiores illo quaerat, tempora ex eaque
+        perferendis necessitatibus. Voluptatum laborum doloribus porro similique
+        quod corrupti harum, ex voluptates fugiat aspernatur, inventore
+        distinctio debitis quas asperiores nisi commodi?
+      </p>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-
       <h2 class="section-title secondary-border">What You Do</h2>
 
       <div>
-        <img src='./assets/images/step-1.svg' alt=''/>
-        <h3>Step 1: Fill Out the Form Above.</h3>
+        <img src="./assets/images/step-1.svg" alt="" />
+        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
         <p>You're already here, so why not?</p>
       </div>
 
       <div>
-        <img src='./assets/images/step-2.svg' alt=''/>
-        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <img src="./assets/images/step-2.svg" alt="" />
+        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
         <p>Are you here to build muscle, lose weight, or just feel good?</p>
       </div>
 
       <div>
-        <img src='./assets/images/step-3.svg' alt=''/>
-        <h3>Step 3: Get Running.</h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        <img src="./assets/images/step-3.svg" alt="" />
+        <h3>Step 3: <span>Get Running.</span></h3>
+        <p>
+          Hit the ground running (literally) once your trainer lays out your
+          plan.
+        </p>
       </div>
 
       <div>
-        <img src='./assets/images/step-4.svg' alt=''/>
-        <h3>Step 4: See Results.</h3>
+        <img src="./assets/images/step-4.svg" alt="" />
+        <h3>Step 4: <span>See Results.</span></h3>
         <p>Bi-weekly checkins with your trainer will keep you focused</p>
       </div>
     </section>
@@ -111,14 +140,14 @@
     <section id="reach-out">
       <h2>Reach Out</h2>
     </section>
-  
-  <footer>
-    <h2>❤️ Made with love by Run Buddy.</h2>
-    <div>
-    <a href="#">Read Our Privacy Policy</a>
-    <br/>
-    <p>&copy; 2019 Run Buddy, Inc.</p>
-    </div>
-  </footer>
-</body>
+
+    <footer>
+      <h2>❤️ Made with love by Run Buddy.</h2>
+      <div>
+        <a href="#">Read Our Privacy Policy</a>
+        <br />
+        <p>&copy; 2019 Run Buddy, Inc.</p>
+      </div>
+    </footer>
+  </body>
 </html>
