--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
         </p>
       </div>
 
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate
+        beatae non veniam, iste molestiae dolorum.
+      </p>
+
       <div>
         <img src="./assets/images/step-4.svg" alt="" />
         <h3>Step 4: <span>See Results.</span></h3>
