--- a/index.html
+++ b/index.html
@@ -132,13 +132,72 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers">
-      <h2>Your Trainers</h2>
+    <section id="your-trainers" class="trainers">
+      <h2 class="section-title primary-border">Meet The Trainers</h2>
+
+      <article class="trainer">
+        <img src="assets/images/trainer-1.jpg" alt="Arron Stephens" />
+        <div class="trainer-bio text-left">
+          <h3>Arron Stephens</h3>
+          <h4>Speed / Strength</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            explicabo, unde suscipit repellendus quam aut ipsam ipsa laudantium
+            sunt animi eveniet assumenda, a voluptates voluptatem. Error maxime
+            eius pariatur odio.
+          </p>
+        </div>
+      </article>
+
+      <article class="trainer">
+        <div class="trainer-bio text-right">
+          <h3>Joanna Gill</h3>
+          <h4>Endurance</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            explicabo, unde suscipit repellendus quam aut ipsam ipsa laudantium
+            sunt animi eveniet assumenda, a voluptates voluptatem. Error maxime
+            eius pariatur odio.
+          </p>
+        </div>
+        <img src="assets/images/trainer-2.jpg" alt="Joanna Gill" />
+      </article>
+
+      <article class="trainer">
+        <img
+          src="assets/images/trainer-3.jpg"
+          alt="Harry &ldquo;The Headband&rdquo; Smith"
+        />
+        <div class="trainer-bio text-left">
+          <h3>Harry "The Headband" Smith</h3>
+          <h4>Strength</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            explicabo, unde suscipit repellendus quam aut ipsam ipsa laudantium
+            sunt animi eveniet assumenda, a voluptates voluptatem. Error maxime
+            eius pariatur odio.
+          </p>
+        </div>
+      </article>
     </section>
 
     <!-- "reach out" section -->
     <section id="reach-out">
-      <h2>Reach Out</h2>
+      <h2 class="primary-border">Reach Out</h2>
+      <iframe src="" frameborder="0"></iframe>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up? Let us know and we'll be
+        happy to talk to you!
+      </p>
+      <ul>
+        <li>55 Main Street</li>
+        <li>Some Town, Ca</li>
+        <li>12345</li>
+        <br />
+        <li>P: 555.RUN.BUDZ (555.786.2839)</li>
+        <li>E: <a href="">info@runbuddy.io</a></li>
+      </ul>
     </section>
 
     <footer>
