--- a/index.html
+++ b/index.html
@@ -182,22 +182,31 @@
     </section>
 
     <!-- "reach out" section -->
-    <section id="reach-out">
-      <h2 class="primary-border">Reach Out</h2>
-      <iframe src="" frameborder="0"></iframe>
-      <h3>Run Buddy</h3>
-      <p>
-        Any questions or concerns before signing up? Let us know and we'll be
-        happy to talk to you!
-      </p>
-      <ul>
-        <li>55 Main Street</li>
-        <li>Some Town, Ca</li>
-        <li>12345</li>
-        <br />
-        <li>P: 555.RUN.BUDZ (555.786.2839)</li>
-        <li>E: <a href="">info@runbuddy.io</a></li>
-      </ul>
+    <section id="reach-out" class="contact">
+      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="contact-info">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.8333353191574!2d-111.8154034843726!3d40.63355735034732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875262558e655555%3A0xc901a0bd70a9fdc6!2s2795%20E%20Cottonwood%20Pkwy%20%23400%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1634776044696!5m2!1sen!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+        <div>
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+          <address>
+            55 Main Street <br />
+            Some Town, Ca<br />
+            12345<br /><br />
+            P: 555.RUN.BUDZ (555.786.2839)<br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+        </div>
+      </div>
     </section>
 
     <footer>
