add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+      <div class="hero-cta">
+        <h1>Start Building Habits.</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit ab
+          adipisci soluta quam nobis quia quo ipsa nam incidunt asperiores
+          aliquid in, voluptatum accusamus aliquam doloremque repudiandae et
+          esse eos nostrum magni magnam? Minus, nisi quasi ab repudiandae fugit
+          natus maxime corporis incidunt dicta fugiat dolores ullam neque
+          deleniti repellat.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
