--- a/index.html
+++ b/index.html
@@ -218,6 +218,26 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
         </div>
+
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" placeholder="Your Name" id="contact-name" />
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+
+        <label for="email">Enter email address:</label>
+        <input
+          class="form-input"
+          type="email"
+          placeholder="Email address"
+          name="email"
+          id="email"
+        />
       </div>
     </section>
 
