--- a/index.html
+++ b/index.html
@@ -99,21 +99,26 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
-        impedit minima consequatur fuga ea facilis laborum quidem repellendus
-        iste, similique odit quo unde asperiores illo quaerat, tempora ex eaque
-        perferendis necessitatibus. Voluptatum laborum doloribus porro similique
-        quod corrupti harum, ex voluptates fugiat aspernatur, inventore
-        distinctio debitis quas asperiores nisi commodi?
-      </p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+      <div class="flex-row">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
+          impedit minima consequatur fuga ea facilis laborum quidem repellendus
+          iste, similique odit quo unde asperiores illo quaerat, tempora ex
+          eaque perferendis necessitatibus. Voluptatum laborum doloribus porro
+          similique quod corrupti harum, ex voluptates fugiat aspernatur,
+          inventore distinctio debitis quas asperiores nisi commodi?
+        </p>
+      </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-      <h2 class="section-title secondary-border">What You Do</h2>
-
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">What You Do</h2>
+      </div>
       <div>
         <img src="./assets/images/step-1.svg" alt="" />
         <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -144,8 +149,9 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary-border">Meet The Trainers</h2>
-
+      <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      </div>
       <article class="trainer">
         <img src="assets/images/trainer-1.jpg" alt="Arron Stephens" />
         <div class="trainer-bio text-left">
@@ -194,7 +200,9 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+      </div>
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.8333353191574!2d-111.8154034843726!3d40.63355735034732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875262558e655555%3A0xc901a0bd70a9fdc6!2s2795%20E%20Cottonwood%20Pkwy%20%23400%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1634776044696!5m2!1sen!2sus"
