--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers">
-      
       <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
       </div>
@@ -236,12 +235,6 @@
         <h2 class="section-title secondary-border">Reach Out</h2>
       </div>
       <div class="contact-info">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.8333353191574!2d-111.8154034843726!3d40.63355735034732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875262558e655555%3A0xc901a0bd70a9fdc6!2s2795%20E%20Cottonwood%20Pkwy%20%23400%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1634776044696!5m2!1sen!2sus"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        ></iframe>
         <div>
           <h3>Run Buddy</h3>
           <p>
@@ -270,14 +263,12 @@
           </form>
         </div>
 
-        <label for="email">Enter email address:</label>
-        <input
-          class="form-input"
-          type="email"
-          placeholder="Email address"
-          name="email"
-          id="email"
-        />
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.8333353191574!2d-111.8154034843726!3d40.63355735034732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875262558e655555%3A0xc901a0bd70a9fdc6!2s2795%20E%20Cottonwood%20Pkwy%20%23400%2C%20Cottonwood%20Heights%2C%20UT%2084121!5e0!3m2!1sen!2sus!4v1634776044696!5m2!1sen!2sus"
+          style="border: 0"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
       </div>
     </section>
 
