--- a/index.html
+++ b/index.html
@@ -253,14 +253,16 @@
         </div>
 
         <div class="contact-form">
-          <h3>Contact Us</h3>
-          <form>
-            <label for="contact-name">Your Name</label>
-            <input type="text" placeholder="Your Name" id="contact-name" />
-            <label for="contact-message">Message</label>
-            <textarea id="contact-message" placeholder="Message"></textarea>
-            <button type="submit">Submit</button>
-          </form>
+          <div class="contact-info">
+            <h3>Contact Us</h3>
+            <form>
+              <label for="contact-name">Your Name</label>
+              <input type="text" placeholder="Your Name" id="contact-name" />
+              <label for="contact-message">Message</label>
+              <textarea id="contact-message" placeholder="Message"></textarea>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
         </div>
 
         <iframe
